adding github and a go back button

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rockstar-coders-demo",
+  "name": "the-movie-db-api-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
